--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GoRide – Aura SX Taxi Service</title>
+<title>GoRide Taxi Service Jaipur | Airport, Local & Outstation Taxi</title>
+
+<meta name="description" content="GoRide Taxi Service Jaipur offers airport pickup & drop, local city rides, outstation and corporate taxi services. Call 9785030185 for instant booking.">
+
+<meta name="keywords" content="GoRide Taxi Jaipur, taxi service Jaipur, Jaipur airport taxi, local taxi Jaipur, outstation taxi Jaipur, cab service Jaipur">
+
+<meta name="author" content="GoRide Taxi Service">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -361,7 +369,16 @@ footer a:hover{
 
 
 <section class="map">
-    <iframe src="https://www.google.com/maps?q=Delhi&output=embed"></iframe>
+    <iframe
+  src="https://www.google.com/maps?q=Jaipur,+Rajasthan,+India&output=embed"
+  width="100%"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
 </section>
 
 
@@ -371,7 +388,7 @@ footer a:hover{
         <div>
             <h3>Contact</h3>
             <p><i class="fa-solid fa-phone"></i> +91 9785030185</p>
-            <p><i class="fa-solid fa-location-dot"></i> Jaipur, India</p>
+            <i class="fa-solid fa-location-dot"></i>📍 Jaipur, Rajasthan, India</p>
         </div>
 
         <div>
