--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@ footer a:hover{
 <body>
 
 <header>
-  <h1>GoRide Taxi Service</h1>
-  <p> Airport • Outstation • Local</p>
-  <a href="tel:+911234567890" class="btn">📞 Call Now</a>
-  <a href="https://wa.me/911234567890" class="btn">💬 WhatsApp</a>
+  <h1>GoRide Taxi Service – Jaipur</h1>
+  <p> Airport • Outstation • Local Cab Services</p>
+  <a href="tel:+919785030185" class="btn">📞 Call Now</a>
+  <a href="https://wa.me/919785030185" class="btn">💬 WhatsApp</a>
 </header>
 
 <section>
@@ -304,11 +304,11 @@ footer a:hover{
 <section>
   <h2>Car Gallery</h2>
   <div class="gallery">
-    <img src="./aura.jpg.jpeg">
-    <img src="./aura2.jpg.jpeg">
-    <img src="./aura3.jpg.jpeg">
-    <img src="./aura4.jpg.jpeg">
-    <img src="./aura.jpg.jpeg">
+    <img src="aura.jpg.jpe">
+    <img src="aura2.jpg.jpeg">
+    <img src="aura3.jpg.jpeg">
+    <img src="aura4.jpg.jpeg">
+    <img src="aura.jpg.jpeg">
   </div>
 </section>
 
@@ -317,29 +317,34 @@ footer a:hover{
 <section>
   <h2>Our Services</h2>
   <div class="services">
-    <div class="service">✈ Airport Pickup & Drop</div>
-    <div class="service">🚕 Local City Ride</div>
-    <div class="service">🛣 Outstation Taxi</div>
-    <div class="service">💼 Corporate Travel</div>
+    <div class="service">✈ Airport Pickup & Drop in Jaipur </div>
+    <div class="service">🚕 Local City Ride Jaipur</div>
+    <div class="service">🛣 Outstation Taxi from Jaipur </div>
+    <div class="service">💼 Corporate Travel Jaipur</div>
   </div>
 </section>
 
 <section>
   <h2>About Our Services</h2>
   <p style="max-width:800px;margin:auto;font-size:17px;line-height:1.8">
-    GoRide Taxi Service aapko safe, comfortable aur time-bound travel experience deta hai.
-    Hamari Aura SX commercial gaadi fully maintained, clean aur fuel-efficient hai.
-    Hum airport pickup & drop, local city travel, outstation rides aur corporate bookings
-    provide karte hain. Experienced driver, transparent pricing aur 24×7 customer support
-    ke saath hum aapki journey ko tension-free banate hain.
-  </p>
+    GoRide Taxi Service Jaipur ek trusted aur reliable taxi service in Jaipur hai jo aapko Jaipur airport taxi, local city cab service aur outstation taxi service provide karta hai. Humari fully maintained commercial taxis, professional aur experienced drivers ke saath hum safe, comfortable aur on-time travel experience ensure karte hain.
+Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation cab from Jaipur chahiye ho, GoRide transparent pricing aur 24×7 taxi service in Jaipur ke saath aapka best travel partner hai. Customer satisfaction, safety aur punctuality humari top priority hai.
+  
+1.  Taxi Service in Jaipur
+2.  Jaipur Airport Taxi
+3.  Jaipur Airport Pickup Drop
+4.  Local Cab Service Jaipur
+5.  Outstation Taxi from Jaipur
+6.  24x7 Taxi Service Jaipur
+7.  Reliable Cab Service Jaipur
+ </p>
 </section>
 
 <section class="pricing">
     <h2>Price List</h2>
     <div class="price-box">
         <div class="price-card">
-            <h3>Local Ride</h3>
+            <h3>Local Ride Jaipur (Jaipur)</h3>
             <span>₹11 / km</span>
         </div>
         <div class="price-card">
@@ -347,7 +352,7 @@ footer a:hover{
             <span>₹999</span>
         </div>
         <div class="price-card">
-            <h3>Outstation</h3>
+            <h3>Outstation from Jaipur</h3>
             <span>₹12 / km</span>
         </div>
         <div class="price-card">
@@ -369,15 +374,15 @@ footer a:hover{
 
 
 <section class="map">
-    <iframe
+  <iframe
   src="https://www.google.com/maps?q=Jaipur,+Rajasthan,+India&output=embed"
   width="100%"
   height="300"
   style="border:0;"
   allowfullscreen=""
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade">
+  loading="lazy">
 </iframe>
+
 
 </section>
 
@@ -388,7 +393,7 @@ footer a:hover{
         <div>
             <h3>Contact</h3>
             <p><i class="fa-solid fa-phone"></i> +91 9785030185</p>
-            <i class="fa-solid fa-location-dot"></i>📍 Jaipur, Rajasthan, India</p>
+            <i class="fa-solid fa-location-dot"></i>📍Jaipur, Rajasthan, India</p>
         </div>
 
         <div>
@@ -424,3 +429,4 @@ footer a:hover{
 
 </body>
 </html>
+
