--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ footer a:hover{
 
 <section>
   <h2>Our Premium Car</h2>
-  <img src="./aura.jpg.jpeg" class="main-img">
+  <img src="aura.jpg.jpeg" class="main-img">
 </section>
 
 <section>
@@ -329,6 +329,10 @@ footer a:hover{
   <p style="max-width:800px;margin:auto;font-size:17px;line-height:1.8">
     GoRide Taxi Service Jaipur ek trusted aur reliable taxi service in Jaipur hai jo aapko Jaipur airport taxi, local city cab service aur outstation taxi service provide karta hai. Humari fully maintained commercial taxis, professional aur experienced drivers ke saath hum safe, comfortable aur on-time travel experience ensure karte hain.
 Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation cab from Jaipur chahiye ho, GoRide transparent pricing aur 24×7 taxi service in Jaipur ke saath aapka best travel partner hai. Customer satisfaction, safety aur punctuality humari top priority hai.
+
+
+
+    
   
 1.  Taxi Service in Jaipur
 2.  Jaipur Airport Taxi
@@ -337,6 +341,7 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
 5.  Outstation Taxi from Jaipur
 6.  24x7 Taxi Service Jaipur
 7.  Reliable Cab Service Jaipur
+    
  </p>
 </section>
 
@@ -429,4 +434,5 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
 
 </body>
 </html>
+
 
