--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ footer a:hover{
 <section>
   <h2>Car Gallery</h2>
   <div class="gallery">
-    <img src="aura.jpg.jpe">
+    <img src="aura4.jpg.jpeg">
     <img src="aura2.jpg.jpeg">
     <img src="aura3.jpg.jpeg">
     <img src="aura4.jpg.jpeg">
@@ -362,11 +362,11 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
         </div>
         <div class="price-card">
             <h3>Half Day</h3>
-            <span>₹2199 / 40 km(4 Hours) </span>
+            <span>₹2199/40 km(4 Hours) </span>
         </div>
         <div class="price-card">
             <h3>Full Day</h3>
-            <span>₹3499 / 80km(8 Hours)</span>
+            <span>₹3499/80km(8 Hours)</span>
         </div>
       </div>
 </section>
@@ -434,5 +434,6 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
 
 </body>
 </html>
+
 
 
