--- a/index.html
+++ b/index.html
@@ -329,19 +329,6 @@ footer a:hover{
   <p style="max-width:800px;margin:auto;font-size:17px;line-height:1.8">
     GoRide Taxi Service Jaipur ek trusted aur reliable taxi service in Jaipur hai jo aapko Jaipur airport taxi, local city cab service aur outstation taxi service provide karta hai. Humari fully maintained commercial taxis, professional aur experienced drivers ke saath hum safe, comfortable aur on-time travel experience ensure karte hain.
 Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation cab from Jaipur chahiye ho, GoRide transparent pricing aur 24×7 taxi service in Jaipur ke saath aapka best travel partner hai. Customer satisfaction, safety aur punctuality humari top priority hai.
-
-
-
-    
-  
-1.  Taxi Service in Jaipur
-2.  Jaipur Airport Taxi
-3.  Jaipur Airport Pickup Drop
-4.  Local Cab Service Jaipur
-5.  Outstation Taxi from Jaipur
-6.  24x7 Taxi Service Jaipur
-7.  Reliable Cab Service Jaipur
-    
  </p>
 </section>
 
@@ -379,16 +366,15 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
 
 
 <section class="map">
-  <iframe
+<iframe
   src="https://www.google.com/maps?q=Jaipur,+Rajasthan,+India&output=embed"
   width="100%"
   height="300"
   style="border:0;"
   allowfullscreen=""
-  loading="lazy">
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
 </iframe>
-
-
 </section>
 
 
@@ -423,7 +409,7 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
     </div>
 
     <div class="copy">
-        © 2026 GoRide Taxi Service | All Rights Reserved
+        © 2026 GoRide Taxi Service Jaipur | Airport & Local Cab
     </div>
 </footer>
 
@@ -434,6 +420,7 @@ Chahe aapko Jaipur airport pickup & drop, local sightseeing cab, ya outstation c
 
 </body>
 </html>
+
 
 
 
